Changes for 1.4.2:

 - fixed "Reset" button for Web screens (Eugene)
 - fixed graph items limitation for IE6 (Eugene)
 - added availability of using spaces for trigger expressions (Eugene)
 - improved inheritance of template graphs (Eugene)
 - fixed permissions for logfile (Eugene)
 - changed syntax of keys for external checks (Alexei)
 - changed syntax of keys for aggregate items (Alexei)
 - fixed DM configuration exchange in 32-bit environments (Alexei)
 - fixed agent library dependencies (Eugene)
 - fixed reset button for graph (Eugene)
 - fixed item multiple cleaning on mass update (Eugene)
 - fixed error 'undefined function delete_service' (Eugene)
 - fixed internal loging system (Eugene)
 - added non-persistent connection for PostgreSQL to avoid problems with unfinished transactions (Alexei)
 - fixed housekeeper to process history_text (Alexei)
 - added availability of using ":," character for key (Eugene)
 - improved zabbix_get for receiving large data (Eugene)
 - fixed shared memory allocation (Eugene)
 - added server-side transactions for PostgreSQL (Alexei)
 - fixed housekeeper to run as multiple transations (Alexei)
 - added support of NOT IN operator for time periods (Alexei)
 - fixed processing of macro {TRIGGER.VALUE} on 32 bit systems (Alexei)
 - changed priorities of '|' and '&' in trigger expressions (Alexei)
 - fixed no graphs for PostgreSQL (Eugene)
 - fixed and improved eventlog monitoring (Eugene)
 - improved not supported values processing (Eugene)
 - fixed processing of user parameters and remote commands having character '%' (Alexei)

Changes for 1.4.1:

 - fixed processing of 'service_state[*]' (Eugene)
 - fixed PostgreSQL database upgrade script (Alexei)
 - adde support of non standard PostgreSQL & MySQL ports (Eugene)
 - fixed compilation of ZABBIX server under HP-UX (Alexei)
 - fixed upgrade of maps without backgrounds (Alexei)
 - improved UserParameters for Win32 (Eugene)