@@ -13,7 +13,7 @@ SUBDIRS = \
 	watchdog \
 	utils
 
-bin_PROGRAMS = zabbix_server
+sbin_PROGRAMS = zabbix_server
 
 zabbix_server_SOURCES = \
 	evalfunc.c evalfunc.h \
